war/style.css
/* ... */
.hidden {
  display: none !important;
  visibility: hidden !important;
}
.affix {
  position: fixed;
}
.error-404 {
  position: relative;
}
.error-404 .alpha {
  font-weight: 300;
  color: #798392;
}
.error-404 .alpha:after {
  content: ": (";
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  position: absolute;
  right: 467px;
  font-family: "open-sans", sans-serif;
  font-size: 65px;
  font-weight: 300;
}
.error-404 .p--large-margin-bottom {
  margin-bottom: 65px;
}
/* header + footer */
.navbar {
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.16);
  padding-top: 20px;
  height: 100px;
  position: relative;
  z-index: 1030;
}
.navbar .solve-icon-logo {
  font-size: 40px;
  color: white;
  display: inline-block;
  width: 40px;
  height: 40px;
}
.navbar-header {
  background-color: transparent;
  background-image: none;
  margin-bottom: 65px;
  color: white;
}
.navbar-header .logotype {
  display: inline-block;
  font-weight: 700;
  color: white;
}
.navbar-header .list-inline {
  line-height: 40px !important;
  text-align: right;
}
.navbar-header .list-inline a {
  position: relative;
  text-decoration: none;
  color: #ffffff;
  padding-bottom: 3px;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 40px;
}
.navbar-header .list-inline a:hover,
.navbar-header .list-inline a:focus {
  text-decoration: none;
  color: #ffffff;
}
.navbar-header .list-inline a:after {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  height: 3px;
  background: rgba(255, 255, 255, 0.3);
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
  -moz-transition: opacity 0.2s, -moz-transform 0.2s;
  transition: opacity 0.2s, transform 0.2s;
  -webkit-transform: translateY(10px);
  -moz-transform: translateY(10px);
  transform: translateY(10px);
}
.navbar-header .list-inline a:hover::after,
.navbar-header .list-inline a:focus::after {
  opacity: 1;
  -webkit-transform: translateY(0px);
  -moz-transform: translateY(0px);
  transform: translateY(0px);
}
.navbar-header .btn {
  margin-left: 12px;
}
.navbar-header.navbar-gradient-teal {
  background-repeat: repeat-x;
  background-image: -webkit-linear-gradient(105deg, #2c7ba3, #29bba1);
  background-image: linear-gradient(105deg, #2c7ba3, #29bba1);
}
html,
body {
  height: 100%;
}
/* Opera Fix */
body:before {
  content: "";
  height: 100%;
  float: left;
  width: 0;
  margin-top: -32767px;
}
#ng-view-wrap {
  min-width: 1000px;
  min-height: 100%;
  position: relative;
}
#ng-view {
  min-height: 650px;
  overflow: auto;
}
.navbar-footer {
  background-color: #383c44;
  color: white;
  margin-top: -100px;
  min-width: 1000px;
}
.navbar-footer .solve-icon-nyc {
  position: relative;
  bottom: 2px;
}
.navbar-footer .list-inline {
  line-height: 40px !important;
  text-align: right;
}
.navbar-footer .list-inline a {
  position: relative;
  text-decoration: none;
  color: #ffffff;
  padding-bottom: 3px;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 20px;
}
.navbar-footer .list-inline a:hover,
.navbar-footer .list-inline a:focus {
  text-decoration: none;
  color: #ffffff;
}
.navbar-footer .list-inline a:after {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  height: 3px;
  background: rgba(255, 255, 255, 0.3);
  content: '';
  opacity: 0;
  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
  -moz-transition: opacity 0.2s, -moz-transform 0.2s;
  transition: opacity 0.2s, transform 0.2s;
  -webkit-transform: translateY(10px);
  -moz-transform: translateY(10px);
  transform: translateY(10px);
}
.navbar-footer .list-inline a:hover::after,
.navbar-footer .list-inline a:focus::after {
  opacity: 1;
  -webkit-transform: translateY(0px);
  -moz-transform: translateY(0px);
  transform: translateY(0px);
}
.navbar-footer .social-icons {
  margin-top: 5px;
  margin-left: 27px;
}
.navbar-footer .social-icons [class*="solve-icon"] {
  margin-left: 3px;
  margin-right: 0;
}
.splash-header {
  height: 483px;
}
.splash-header .background-wrapper {
  height: 648px;
  padding-top: 165px;
}
.splash-header .background-wrapper.wrapper-gradient {
  background-repeat: repeat-x;
  background-image: -webkit-linear-gradient(75deg, #2c7ba3, #29bba1);
  background-image: linear-gradient(75deg, #2c7ba3, #29bba1);
  min-width: 1000px;
  z-index: 2;
}
.splash-header .background-wrapper.content-wrapper {
  z-index: 3;
}
.splash-header .background-wrapper.content-wrapper .content-wrapper-h1 {
  line-height: 48px;
}
.splash-header .background-wrapper.content-wrapper .content-wrapper-h1:first-of-type {
  margin-top: 40px;
}
.splash-header .background-wrapper.content-wrapper .content-wrapper-h1:last-of-type {
  margin-bottom: 30px;
}
.splash-header .background-wrapper.content-wrapper .lead {
  margin-bottom: 40px;
}
.splash-header .background-wrapper.content-wrapper .lead .link-white {
  line-height: 48px;
}
.splash-blog-update {
  background-color: #f3f4f6;
  padding-top: 30px;
  padding-bottom: 30px;
}
.splash-feature {
  padding-bottom: 105px;
}
.splash-feature:first-of-type {
  padding-top: 105px;
}
[src*="splash_page_data.jpg"],
[src*="splash_page_developers.jpg"] {
  width: 415px;
}
[src*="splash_page_security"] {
  width: 398px;
}
[src*="splash_page_partner"] {
  width: 254px;
  margin-right: 80px;
}
.splash-feature-h2 {
  margin-top: 20px;
}
.splash-work-link:after,
.splash-feature-link:after {
  font-family: "solve-v02";
  content: "\e605";
  font-size: 16px;
  color: #d3d8e0;
  display: inline-block;
  margin-left: 8px;
}
.splash-work {
  background-repeat: repeat-x;
  background-image: -webkit-linear-gradient(180deg, #f3f4f6, #ffffff);
  background-image: linear-gradient(180deg, #f3f4f6, #ffffff);
}
.splash-work:before,
.splash-work:after {
  content: " ";
  display: table;
}
.splash-work:after {
  clear: both;
}
.splash-work:before,
.splash-work:after {
  content: " ";
  display: table;
}
.splash-work:after {
  clear: both;
}
/* ... */

